javadash:v.1.0.1